# Proyecto-Fichajes

./: .env.example  INICIO.cmd  INICIO.ps1  QUICKSTART.md  README.md  crear_admin.py  crear_entorno_prueba.py  crear_usuarios_bcrypt.py  pyproject.toml  test_telegram.py
Downloads/Proyecto-Fichajes-main/Proyecto-Fichajes-main/: .env.example  .gitignore  INICIO.ps1  QUICKSTART.md  README.md  crear_admin.py
Downloads/Proyecto-Fichajes-main/Proyecto-Fichajes-main/fichajes_backpy/: main.py  requirements.txt
Downloads/Proyecto-Fichajes-main/Proyecto-Fichajes-main/scripts/: README.md  crear_usuariosPrueba.py  crear_usuarios_bcrypt.py  resetear_admin.py  (+2 more)
fichajes_backpy/app/core/: config.py  security.py
fichajes_backpy/app/database/: mongodbService.py
fichajes_backpy/app/routes/: fichajes.py  telegram.py
fichajes_frontpy/: crear_usuariosPrueba.py  fichajes.py  interfaz.py  requirements.txt  resetear_admin.py  telegram_bot.py
pruebas_manuales/: crear_usuarios_bcrypt.py  test_telegram.py  verificar_usuarios.py
src/fichajes_backpy/: main.py  requirements.txt
src/fichajes_common/: __init__.py  location.py
src/scripts/: __init__.py  crear_admin.py  crear_entorno_prueba.py
src/streamlit_app/: __init__.py  app.py  requirements.txt
src/streamlit_app/pages/: 1_🏢_Portal_RRHH.py  2_👤_Portal_Empleado.py
src/streamlit_app/utils/: auth.py  database.py  geolocation.py  helpers.py
src/telegram_bot/: __init__.py  bot.py
streamlit_app/: app.py  requirements.txt
streamlit_app/utils/: __init__.py  auth.py  database.py
telegram_bot/: bot.py  requirements.txt
(+29 files in other folders)
